docs-archive/versioned_docs/version-1.6.0/docs/managed-datahub/release-notes/v_0_3_10.md
---
description: >-
  DataHub Cloud v0.3.10 release notes from April 2025 with smart assertions,
  automation fixes, lineage repairs, and analytics improvements.
title: v0.3.10
slug: /managed-datahub/release-notes/v_0_3_10
custom_edit_url: >-
  https://github.com/datahub-project/datahub/blob/master/docs/managed-datahub/release-notes/v_0_3_10.md
---

# v0.3.10

---

## Release Availability Date

4-April-2025

## Recommended CLI/SDK

1.0.0.2

## Helm Chart

1.5.21

## Known Issues

- API Tracing: Some aspects (i.e. `siblings`) which can be generated by system hooks are reported as a trace error if the system aspect and ingestion are creating conflicting aspects.
- When enabling the `ONLINE_SMART_ASSERTIONS_ENABLED` feature flag in gms, customers must have their remote executors on v0.3.10.2 or higher for the new feature to work. Furthermore, offline pipeline driven smart assertions must be disabled.

## Release Changelog

---

### v0.3.10.4

- Bug Fixes

  - [GraphQL] Pin GraphiQL dependency & use React 18 with specific versions and corrected SRI hashes
  - [UX] Hide deleted assets on home page recommendations

### v0.3.10.3

- Bug Fixes

  - [Automations] Fixes an issue where remote actions were not running due to a error when trying to install a local version of acryl-datahub
  - [Automations] Fixes bug with rendering in glossary term selector, where some terms wouldn't load
  - [Stats] Fixes bug in fetching appropriate table row count when sampling was used to profile the table
  - [Analytics] Adds usage analytics to the home page
  - [Lineage] Fixes an issue where lineage edges were not showing when transformation nodes are hidden
  - [Slack] Fixes an error that occurs in some rare cases on slack app installation
  - [UX + Permissions] Fixes permissions for viewing the structured properties & manage ingestion pages

### v0.3.10.2

- Known Issues

  - [Remote Automations] Remote Automations runners are encountering a dependency resolution issue when attempting to install `acryl-datahub`. Remote automations are not supported in this release. If you are interested to run automations on your Remote Executor please reach out to DataHub Cloud support.

- Bug Fixes
  - [Executor / Observe] You no longer need to set `ONLINE_SMART_ASSERTIONS_ENABLED` env var on the remote executor for online smart assertions to work.
  - [Forms] Fixes a bug introduced in `v0.3.10.1` where you would be removed from the forms experience when applying filters or making certain changes in the bulk by question form view.
  - [Manage Ingestion] Fixes a bug from `v0.3.10.1` where you may not be able to properly switch pages in the manage ingestion experience.
  - [Structured Properties] Fixes an issue where you can accidentally create an Entity type structured property that accepts no Entity types as values.
  - [API] Prevent validation errors from entity type case sensitivity
  - [Observe] Adding tags to assertions now works
- Product
  - [Executor Pools] Pool id character limits increased to 200
  - [Observe] Clear explanations for the various tuning knobs on Smart Assertions

### v0.3.10.1

- All changes in https://github.com/datahub-project/datahub/releases/tag/v1.0.0

- Known Bugs

  - [Remote Executor] The env var `ONLINE_SMART_ASSERTIONS_ENABLED` will need to be enabled in the remote excecutor for online smart assertions to work.
  - [Forms] There is a bug in the bulk by question Forms experience where if you apply filters, change the search query, change page, or change page size the modal to fill the form out closes. This is fixed in `v0.3.10.2` which is a recommended version over this version.
  - [Manage Ingestion] Styling changes affected the ability to switch between pages for certain users depending on their ingestion data. This could result in not being able to properly change pages in the ingestion page.
  - [Remote Automations] Remote Automations runners are encountering a dependency resolution issue when attempting to install `acryl-datahub`. Remote automations are not supported in this release. If you are interested to run automations on your Remote Executor please reach out to DataHub Cloud support.

- Breaking Changes

  - [API] API validation is executed for all ASYNC ingestion requests. This includes URN, Entity Type Names, Entity & Aspect names. This may result in 4xx exceptions when these rules
    are violated.

- Bug Fixes

  - [Schema Tab] Render rich text in the V1 experience where you can click on links instead of having to click "View more"
  - [Subscriptions] Fix edge case where we were not showing display names for users or groups properly in subscription summaries
  - [Nav Bar] Fix the styling of the logo in the new nav bar header experience in Safari
  - [Group Membership] Harden the UI to prevent errors when showing group memberships on a user profile page
  - [Structured Properties] Allow users to search for Glossary Nodes when applying asset values to structured properties
  - [Lineage] Hide a few unwanted and unneeded filters in the lineage list view from the UI
  - [Lineage] Remove restriction on per-hop node limit, causing some results to be hidden.
  - [Lineage] Fix an issue where indirect upstream lineage was incomplete for certain entity types like Charts. Both Impact Analysis & Lineage Graph. This was also causing Upstream Health sidebar section to underreport upstream assets with health problems.
  - [Queries Tab] Change the page size
  - [Search Filters] Adding support for a "Has Siblings" filter (disabled by default, available by request).

- Product

  - **Navigation**: Our new simplified nav bar is now switched on by default in the V2 UI
  - **Custom Asset Actions**: Links create via the Documentation tab can now be elevated to display in page headers and search results. We've also added an `upsertLink` GraphQL endpoint for easier programmatic management of links.
  - **Proposals**: Entity profile pages now display the new proposal types: Ownership, Domains, and Structured Properties.
  - **Proposals**: Our redesigned proposals experience (Proposals 2.0) is now in beta (enabled by request)! Try out the improved interface for viewing proposals you can approve/decline as well as those that you've created.
  - **Proposal Notifications**: You can now configure to be notified when you are assigned to review a proposal, or a proposal you raised is approved or denied from **Settings** > **My Notifications**.
  - **Observe**: Introducing on-demand smart assertions in beta (enabled by request)! You can now create freshness, volume, and field metric anomaly detection checks via the UI for any table that's supported by Observe.
  - **Observe**: Smart assertion tuning - Improve your anomaly monitors by adjusting training data lookback window, tightening or loosening the sensitivity, and adding data-point exclusion windows.
  - **Observe**: Incidents V2 - Incidents have received a significant uplift! With capabilities to set assignees, severity, stage, and impacted assets. Also: search, group & filter incidents on the incidents tab.
  - **Remote Executor**: Introduces a new **Executors** tab in the **Manage Data Sources** page for improved management and observability of Remote Executor Pools
  - **Remote Executors**: Create and provision new Executor Pools directly from the UI and optionally set them as default for future Ingestion Source configurations. Easily view the set of deployed executors, their status, configured Ingestion Sources, and current running tasks.
  - **Compliance Forms**: Support deep linking to a specific Compliance Form completion experience inside the Compliance Center.
  - **Search**: Support searching for Deprecated assets via a new Deprecated filter. Also, show deprecation in Lineage sidebar as an upstream health warning.

- Platform

  - **OpenAPI**: API Tracing improvements (Experimental)
  - **GraphQL**: Sorting added to `scrollAcrossEntities`
  - **Performance**: Improved access policy performance when using nested domains and containers
  - **OpenAPI**: Operation endpoints created to fetch raw ES documents and view kafka lag on MCP and MCL topics
  - **OpenAPI**: Additional validation for URNs and entity/aspect names when using async endpoints
  - **OpenAPI**: Fixed timeseries aspect ingestion bug #12912
  - **Restore Indices Job**: Support added for read-only replicas

- Ingestion
  - **MLflow**: Support dataset ↔ run lineage with customizable platform mapping for datasets.
  - **OpenAPI**: Ingestion can use OpenAPI instead of Rest.li, set environment variable `DATAHUB_REST_SINK_DEFAULT_ENDPOINT=OPENAPI`
  - **API Tracing**: Ingestion can trace each async write by tracking the write to primary and search storage, set environment variable `DATAHUB_REST_TRACE_MODE=ENABLED`

### v0.3.10

- Regression in the Slack app was discovered after release. Do not use this release, instead go straight to v0.3.10.1.
